--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "canvas": "^3.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.16.0",
+    "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "pdfjs-dist": "^3.4.120",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-pdf": "^7.1.2",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
